# Desktop-chat

./: .gitignore  CMakeLists.txt  LICENSE
src/: main.cpp
src/ui/widgets/: CustomButton.cpp  CustomButton.h
src/ui/widgets/common/: CustomBox.cpp  CustomBox.h
src/ui/windows/: MainWindow.cpp  MainWindow.h
